:sparkles: build fail 요인 수정