@@ -1,7 +1,6 @@
 package yapp.allround3.project.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -31,6 +30,6 @@ public class ProjectService {
 
 		return participants.stream()
 			.map(Participant::getProject)
-			.collect(Collectors.toList());
+			.toList();
 	}
 }
